<resources>
    <string name="app_name">Lunch Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_order">Start Order</string>
    <string name="next">Next</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="cancel">Cancel</string>
    <string name="order_summary">Order Summary</string>
    <string name="tax">Tax: $%s</string>
    <string name="price">Price: $%s</string>
    <string name="total">Total: %s</string>
    <string name="send">Send To another app</string>
    <string name="orderSend"> For entree: %s($%s) \n For Side Meal: %s($%s) \n For Accompaniment: %s($%s) \n\n Total: $%s + $%s = $%s</string>

</resources>